--- a/src/vacancy-single.html
+++ b/src/vacancy-single.html
@@ -15,7 +15,7 @@
                         </div>
                         <nav class="menu">
                             <ul class="menu-list">
-                                <li class="menu-item"><a href="#" class="menu-link menu-link--active">Вакансии</a></li>
+                                <li class="menu-item"><a href="vacancy.html" class="menu-link menu-link--active">Вакансии</a></li>
                                 <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
                             </ul>
                         </nav>
@@ -27,8 +27,12 @@
                         </div>
                         <div class="header-links">
                             <ul class="header-links-list">
-                                <li class="header-links-item"><a href="#" class="header-links-login">Войти</a></li>
-                                <li class="header-links-item"><a href="#" class="header-links-registration">Регистрация</a></li>
+                                <li class="header-links-item">
+                                    <a href="#loginForm" class="header-links-login header-links-popap">Войти</a>
+                                </li>
+                                <li class="header-links-item">
+                                    <a href="#registrationForm" class="header-links-registration header-links-popap">Регистрация</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -83,7 +87,7 @@
                                 <a href="#" class="btn vacancy-action-link">Откликнуться</a>
                             </div>
                             <div class="vacancy-favorite">
-                                <a href="#" class="vacancy-favorite-link">В избранное</a>
+                                <button class="vacancy-favorite-link">В избранное</button>
                             </div>
                         </div>
                     </div>
@@ -91,6 +95,7 @@
             </main>
 
             //= html/_footer.html
+            //= html/_form.html
             //= html/_scripts.html
         </div>
     </body>
