--- a/src/lk-vacancy.html
+++ b/src/lk-vacancy.html
@@ -97,30 +97,32 @@
 
             <div class="lk-wrapper">
                 <aside class="sidebar">
-                    <div class="sidebar-profile">
-                        <div class="sidebar-avatar">
-                            <img src="img/avatar.svg" alt="Константин Константинопольский">
+                    <div class="sidebar-content fixed">
+                        <div class="sidebar-profile">
+                            <div class="sidebar-avatar">
+                                <img src="img/avatar.svg" alt="Константин Константинопольский">
+                            </div>
+                            <p class="sidebar-name">Константин Константинопольский</p>
+                            <p class="sidebar-email">konstantink@gmail.com</p>
                         </div>
-                        <p class="sidebar-name">Константин Константинопольский</p>
-                        <p class="sidebar-email">konstantink@gmail.com</p>
+                        <ul class="sidebar-menu">
+                            <li class="sidebar-item">
+                                <a href="lk-profile.html" class="sidebar-link">Профиль</a>
+                            </li>
+                            <li class="sidebar-item sidebar-item--active">
+                                <a href="lk-vacancy.html" class="sidebar-link">Вакансии</a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a href="lk-resume.html" class="sidebar-link">Резюме</a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a href="#" class="sidebar-link">Курсы</a>
+                            </li>
+                            <li class="sidebar-item sidebar-item--logout">
+                                <a href="#" class="sidebar-link">Выход</a>
+                            </li>
+                        </ul>
                     </div>
-                    <ul class="sidebar-menu">
-                        <li class="sidebar-item">
-                            <a href="lk-profile.html" class="sidebar-link">Профиль</a>
-                        </li>
-                        <li class="sidebar-item sidebar-item--active">
-                            <a href="lk-vacancy.html" class="sidebar-link">Вакансии</a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a href="lk-resume.html" class="sidebar-link">Резюме</a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a href="#" class="sidebar-link">Курсы</a>
-                        </li>
-                        <li class="sidebar-item sidebar-item--logout">
-                            <a href="#" class="sidebar-link">Выход</a>
-                        </li>
-                    </ul>
                 </aside>
 
                 <main class="lk-main">
