Разделение стилей и скриптов + страница ЛК Профиль

--- a/src/lk-resume.html
+++ b/src/lk-resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        //= html/_head.html
+        //= html/_lk-head.html
         <title>GoStudy - Мои резюме</title>
     </head>
 
@@ -178,7 +178,7 @@
 
 
             //= html/_lk-footer.html
-            //= html/_scripts.html
+            //= html/_lk-scripts.html
         </div>
     </body>
 </html>
