--- a/src/vacancy.html
+++ b/src/vacancy.html
@@ -52,7 +52,7 @@
                             </div>
 
                             <div class="group filter-group">
-                                <select name="sources" id="sources-range" class="custom-select sources" placeholder="Сфера деятельности">
+                                <select name="sources" id="sources-range" class="custom-select" placeholder="Сфера деятельности">
                                     <option value="IT сфера">IT сфера</option>
                                     <option value="Экономика">Экономика</option>
                                     <option value="Юриспруденция">Юриспруденция</option>
