--- a/src/lk-profile.html
+++ b/src/lk-profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        //= html/_head.html
+        //= html/_lk-head.html
         <title>GoStudy - Профиль</title>
     </head>
 
@@ -127,7 +127,7 @@
 
                 <main class="lk-main">
                     <div class="tabs lk-tabs">
-                        <div class="lk-tabs-head">
+                        <div class="tabs-head lk-tabs-head">
                             <ul class="tabs-caption">
                                 <li class="tabs-caption-item active">Личные данные</li>
                                 <li class="tabs-caption-item">Пароль</li>
@@ -153,16 +153,16 @@
                                     </div>
                                 </div>
 
-                                <div class="box">
-                                    <div class="column-third">
+                                <div class="box box-wrap box-row">
+                                    <div class="column-settings">
                                         <div class="field-group">
                                             <label for="profileName" class="label-field">Имя</label>
                                             <input id="profileName" name="profileName" type="text" value="Константин">
                                         </div>
 
                                         <div class="field-group">
-                                            <label for="profileSex" class="label-field">Пол</label>
-                                            <select id="profileSex" name="profileSex">
+                                            <label for="sources-sex" class="label-field">Пол</label>
+                                            <select id="sources-sex" name="profileSex" class="custom-select custom-select--text custom-select--bg" placeholder="Не выбран">
                                                 <option value="Мужской">Мужской</option>
                                                 <option value="Женский">Женский</option>
                                             </select>
@@ -174,15 +174,15 @@
                                         </div>
                                     </div>
 
-                                    <div class="column-third">
+                                    <div class="column-settings">
                                         <div class="field-group">
                                             <label for="profileSurname" class="label-field">Фамилия</label>
                                             <input id="profileSurname" name="profileSurname" type="text" value="Константинопольский">
                                         </div>
 
                                         <div class="field-group">
-                                            <label for="profileAge" class="label-field">Возраст</label>
-                                            <select id="profileAge" name="profileAge">
+                                            <label for="sources-age" class="label-field">Возраст</label>
+                                            <select id="sources-age" name="profileAge" class="custom-select custom-select--text custom-select--bg" placeholder="Не выбран">
                                                 <option value="Возраст 1">Возраст 1</option>
                                                 <option value="Возраст 2">Возраст 2</option>
                                             </select>
@@ -194,14 +194,14 @@
                                         </div>
                                     </div>
 
-                                    <div class="column-third">
+                                    <div class="column-settings">
                                         <div class="field-group">
                                             <label for="profileCity" class="label-field">Город</label>
                                             <input id="profileCity" name="profileCity" type="text" value="Санкт-Петербург">
                                         </div>
                                     </div>
-                                    <div class="column-full">
-                                        <input type="submit" value="Сохранить" class="btn">
+                                    <div class="column-settings-full">
+                                        <input type="submit" value="Сохранить" class="btn btn--light-blue btn--small">
                                     </div>
                                 </div>
                             </form>
@@ -211,21 +211,21 @@
                             <h2 class="title">Изменить пароль</h2>
                             <form id="changePassword" action="#" class="lk-form lk-form-change-password">
                                 <div class="field-group">
-                                    <label class="label-field">Текущий пароль</label>
+                                    <label for="passwordOld" class="label-field">Текущий пароль</label>
                                     <input id="passwordOld" name="passwordOld" type="password">
                                 </div>
 
                                 <div class="field-group">
-                                    <label class="label-field">Новый пароль</label>
+                                    <label for="passwordNew" class="label-field">Новый пароль</label>
                                     <input id="passwordNew" name="passwordNew" type="password">
                                 </div>
 
                                 <div class="field-group">
-                                    <label class="label-field">Повторить новый пароль</label>
+                                    <label for="passwordNewRepeat" class="label-field">Повторить новый пароль</label>
                                     <input id="passwordNewRepeat" name="passwordNewRepeat" type="password">
                                 </div>
 
-                                <input type="submit" value="Сохранить" class="btn">
+                                <input type="submit" value="Сохранить" class="btn btn--light-blue btn--small">
                             </form>
                         </div>
 
@@ -233,7 +233,7 @@
                             <h2 class="title">Удалить учётную запись</h2>
                             <p>Хотите удалить свою учетную запись?</p>
                             <p>Удаление учетной записи приведет к удалению всего ее содержимого и всех связанных с ней данных.</p>
-                            <button id="removeProfile" class="btn remove-btn">Удалить</button>
+                            <button id="removeProfile" class="btn btn--small ">Удалить</button>
                         </div>
                     </div>
                 </main>
@@ -241,7 +241,7 @@
 
 
             //= html/_lk-footer.html
-            //= html/_scripts.html
+            //= html/_lk-scripts.html
         </div>
     </body>
 </html>
