--- a/src/lk-profile.html
+++ b/src/lk-profile.html
@@ -70,7 +70,7 @@
 
                             <div class="dropdown-menu dropdown-menu--profile">
                                 <p class="dropdown-menu-title">
-                                    <img src="/img/avatar.svg" class="dropdown-menu-avatar" alt="">
+                                    <img src="img/avatar.svg" class="dropdown-menu-avatar" alt="">
                                 </p>
                                 <ul class="dropdown-menu-list">
                                     <li class="dropdown-menu-item">
@@ -134,7 +134,7 @@
                                 <li class="tabs-caption-item">Удалить учётную запись</li>
                             </ul>
 
-                            <a href="#" class="btn">Создать корпоративный аккаунт</a>
+                            <a href="#" class="btn btn--light-blue">Создать корпоративный аккаунт</a>
                         </div>
 
                         <div class="tabs-content active column column-full column-lk">
