--- a/src/lk-resume.html
+++ b/src/lk-resume.html
@@ -70,7 +70,7 @@
 
                             <div class="dropdown-menu dropdown-menu--profile">
                                 <p class="dropdown-menu-title">
-                                    <img src="/img/avatar.svg" class="dropdown-menu-avatar" alt="">
+                                    <img src="img/avatar.svg" class="dropdown-menu-avatar" alt="">
                                 </p>
                                 <ul class="dropdown-menu-list">
                                     <li class="dropdown-menu-item">
@@ -129,7 +129,7 @@
                     <div class="column column-full column-lk">
                         <div class="box-head box">
                             <h1>Мои резюме</h1>
-                            <a href="#" class="btn">Добавить резюме</a>
+                            <a href="#" class="btn btn--light-blue">Добавить резюме</a>
                         </div>
 
                         <div class="box-body">
