--- a/src/vacancy-single.html
+++ b/src/vacancy-single.html
@@ -28,10 +28,10 @@
                         <div class="header-links">
                             <ul class="header-links-list">
                                 <li class="header-links-item">
-                                    <a href="#loginForm" class="header-links-login header-links-popap">Войти</a>
+                                    <a href="#loginForm" class="header-links-login btn-modal">Войти</a>
                                 </li>
                                 <li class="header-links-item">
-                                    <a href="#registrationForm" class="header-links-registration header-links-popap">Регистрация</a>
+                                    <a href="#registrationForm" class="header-links-registration btn-modal">Регистрация</a>
                                 </li>
                             </ul>
                         </div>
@@ -84,7 +84,7 @@
 
                         <div class="box-footer box">
                             <div class="vacancy-action">
-                                <a href="#" class="btn vacancy-action-link">Откликнуться</a>
+                                <a href="#" class="btn btn--light-blue vacancy-action-link">Откликнуться</a>
                             </div>
                             <div class="vacancy-favorite">
                                 <button class="vacancy-favorite-link">В избранное</button>
