--- a/src/vacancy.html
+++ b/src/vacancy.html
@@ -28,10 +28,10 @@
                         <div class="header-links">
                             <ul class="header-links-list">
                                 <li class="header-links-item">
-                                    <a href="#loginForm" class="header-links-login header-links-popap">Войти</a>
+                                    <a href="#loginForm" class="header-links-login btn-modal">Войти</a>
                                 </li>
                                 <li class="header-links-item">
-                                    <a href="#registrationForm" class="header-links-registration header-links-popap">Регистрация</a>
+                                    <a href="#registrationForm" class="header-links-registration btn-modal">Регистрация</a>
                                 </li>
                             </ul>
                         </div>
