--- a/src/vacancy-single.html
+++ b/src/vacancy-single.html
@@ -42,7 +42,7 @@
             <main class="vacancy-single">
                 <div class="container">
                     <h1 class="title title-blue">Веб-дизайнер</h1>
-                    <div class="column column-full">
+                    <div class="column column-full card">
                         <div class="box-head box">
                             <div class="vacancy-company">
                                 <p>Ростелеком</p>
