--- a/src/html/_scripts.html
+++ b/src/html/_scripts.html
@@ -1,4 +1,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery/jquery-3.1.1.min.js"><\/script>')</script>
 <script src="js/libs/magnific_popup/jquery.magnific-popup.min.js"></script>
+<script src="js/libs/slick/slick.min.js"></script>
 <script src="js/main.js"></script>
