--- a/src/vacancy.html
+++ b/src/vacancy.html
@@ -100,7 +100,7 @@
                     </div>
 
                     <div class="box vacancy-row">
-                        <div class="column vacancy-card">
+                        <div class="column card vacancy-card">
                             <a href="vacancy-single.html" class="vacancy-link">
                                 <div class="box-head box">
                                     <div class="vacancy-name">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
 
-                        <div class="column vacancy-card">
+                        <div class="column card vacancy-card">
                             <a href="vacancy-single.html" class="vacancy-link">
                                 <div class="box-head box">
                                     <div class="vacancy-name">
@@ -172,7 +172,7 @@
                             </a>
                         </div>
 
-                        <div class="column vacancy-card">
+                        <div class="column card vacancy-card">
                             <a href="vacancy-single.html" class="vacancy-link">
                                 <div class="box-head box">
                                     <div class="vacancy-name">
@@ -208,7 +208,7 @@
                             </a>
                         </div>
 
-                        <div class="column vacancy-card">
+                        <div class="column card vacancy-card">
                             <a href="vacancy-single.html" class="vacancy-link">
                                 <div class="box-head box">
                                     <div class="vacancy-name">
@@ -244,7 +244,7 @@
                             </a>
                         </div>
 
-                        <div class="column vacancy-card">
+                        <div class="column card vacancy-card">
                             <a href="vacancy-single.html" class="vacancy-link">
                                 <div class="box-head box">
                                     <div class="vacancy-name">
@@ -280,7 +280,7 @@
                             </a>
                         </div>
 
-                        <div class="column vacancy-card">
+                        <div class="column card vacancy-card">
                             <a href="vacancy-single.html" class="vacancy-link">
                                 <div class="box-head box">
                                     <div class="vacancy-name">
@@ -316,7 +316,7 @@
                             </a>
                         </div>
 
-                        <div class="column vacancy-card">
+                        <div class="column card vacancy-card">
                             <a href="vacancy-single.html" class="vacancy-link">
                                 <div class="box-head box">
                                     <div class="vacancy-name">
@@ -352,7 +352,7 @@
                             </a>
                         </div>
 
-                        <div class="column vacancy-card">
+                        <div class="column card vacancy-card">
                             <a href="vacancy-single.html" class="vacancy-link">
                                 <div class="box-head box">
                                     <div class="vacancy-name">
@@ -387,10 +387,6 @@
                                 </div>
                             </a>
                         </div>
-
-
-
-
 
                         <nav class="pagination column-full" role="navigation">
                             <div class="nav-links">
